# DocExtract-AI-CLI

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: invoice_schema.json  sample_invoice.txt
src/docextract/: __init__.py  __main__.py  extractor.py  pipeline.py  providers.py  schema.py  tui.py
tests/: test_extractor.py  test_schema.py
